[package]
name = "mouse"
version = "0.1.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
errno = "0.2"

simplelog = { version = "0.9", optional = true }
log = "0.4"

rust-crypto = "0.2"

[build-dependencies]
cc = "1.0"

[features]
default = ["term_logger"]
term_logger = ["simplelog"]
